--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -1,9 +1,10 @@
+section.splash(style="background-image:url('../end.jpg')")
+	div(style="left:25%;height:200px")
+		h1(style="font-size:3em") Contact Me
+		h2 Reach Out to Me Today!
+		h1: span.glyphicon.glyphicon-chevron-down(style="top:90%", ng-click="moveDown()")
 section.container#contact
 	div.container
-		header
-			h1.title Contact Me
-			p.small Hi, I'm Alyssa Hosbach!
-			p.small You can reach me by phone, email, or leaving a message below.
 		div(style="height:150px;margin-bottom:20px").contactInfo
 			div.grid-half
 				div.panel
