--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -11,20 +11,31 @@ section.container#philosophy
 				| , my mission is to provide the highest quality, force-free, scientific-based dog training and care to each of my clients and their furry family members. Dancing tails are a natural result because I attend to the physical, emotional, and environmental well being of the dogs in my care.
 			p Certified in Training and Behavior Consultation from the Dog Training Internship Academy in San Francisco, my training philosophy is based on animal learning theory, which explains how learning works and occurs. I use Classical and Operant Conditioning when designing the best training plan for your dog.
 		div.panel
-			h2 Classical Condition: Dogs learn through association.
+			h2 
+				span.green Classical Condition: 
+				| Dogs learn through association.
+			p Dogs learn that when one thing happens, another will follow. He doesn’t have to do anything to make the second thing happen.
+			ul: li For example, Ivan Pavlov was the first to identify associative learning when his research dogs started salivating when they heard a tone prior to getting food. The dogs had learned that when they heard the tone, food was coming.
+		div.panel
 			img(src="classicalConditioning.jpg")
 		div.panel
+			h2 
+				span.green Operant Consition: 
+				| Dogs learn through consequences.
 			p Out of the four ways to increase or decrease behavior, I only use two: positive reinforcement and negative punishment. Both are humane training techniques, resulting in dancing tails and a strong bond between dog and handler.
 			ul
-			p Positive Reinforcement increases a behavior due to the presentation of a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will happen if I…”
-			p For example, I ask Charlie to sit, he sits, and then he gets his favorite treat.
-			p Negative Punishment decreases a behavior by removing a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will stop if I…”
-			p For example, Lola plays too rough, so I walk away.
+				li 
+					span.bold Positive Reinforcement 
+					| increases a behavior due to the presentation of a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will happen if I…”
+					ul: li For example, I ask Charlie to sit, he sits, and then he gets his favorite treat.
+				li 
+					span.bold Negative Punishment 
+					| decreases a behavior by removing a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will stop if I…”
+					ul: li For example, Lola plays too rough, so I walk away.
 		div.panel
-			h2 Operant Consition: Dogs learn through consequences.
 			img(src="operantConditioning.jpg")
 		div.panel
-			h2 My take on dominance theory...
+			h2.green My take on dominance theory...
 			p According to the Pet Professional Guild, “Dominance theory is an obsolete and aversive method of interacting with animals that has at its foundation incorrect and misinterpreted data which can result in damage to the animal-human relationship and cause behavioral problems in the animal.” Further explanation—all of which I wholly agree with—can be found on 
 				a(href="http://www.petprofessionalguild.com/DominanceTheoryPositionStatement",target="_blank") this Pet Professional Guild webpage
 				| .
@@ -57,23 +68,14 @@ section.container
 	div.grid-half
 		div.panelContainer
 			div.panel
-				h2 Interesting Articles
+				h2 Great Blogs
 			div.panel.list
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Pitcairns-Complete-Guide-Natural-Health/dp/157954973X/ref=sr_1_1?s=books&ie=UTF8&qid=1424997405&sr=1-1&keywords=dr.+pitcairns+complete+guide") Dr. Pitcairn's Complete Guide to Natural Health for Dogs & Cats
-					p Dr. Richard Pitcairn
+					p: a.bold(href="http://www.yourpitbullandyou.com/") Your Pit Bulls and You
+					p www.yourpitbullandyou.com
 				div.listItem
-					p: a.bold(href="http://www.amazon.com/Dont-Shoot-Dog-Teaching-Training/dp/0553380397/ref=sr_1_2?s=books&ie=UTF8&qid=1424997672&sr=1-2&keywords=don%27t+shoot+the+dog+karen+pryor") Don't Shoot the Dog! The New Art of Teaching and Training
-					p Karen Pryor
-				div.listItem
-					p: a.bold(href="http://www.amazon.com/Inside-Dog-What-Dogs-Smell/dp/1416583432/ref=sr_1_1?s=books&ie=UTF8&qid=1425011239&sr=1-1&keywords=inside+of+a+dog+by+alexandra+horowitz") Inside of a Dog: What Dogs See, Smell, and Know
-					p Alexandra Horowitz
-				div.listItem
-					p: a.bold(href="http://www.amazon.com/Raising-Behaviorally-Healthy-Puppy-parenting/dp/0974954241/ref=sr_1_1?s=books&ie=UTF8&qid=1425011509&sr=1-1&keywords=A+Pet+Parenting+Guide") Raising A Behaviorally Healthy Puppy: A Pet Parenting Guide
-					p Dr. Suzanne Hetts
-				div.listItem
-					p: a.bold(href="http://www.amazon.com/Power-Positive-Dog-Training/dp/0470241845/ref=sr_1_1?s=books&ie=UTF8&qid=1425011684&sr=1-1&keywords=The+Power+of+Positive+Dog+Training") The Power of Positive Dog Training
-					p Pat Miller
+					p: a.bold(href="http://www.patriciamcconnell.com/theotherendoftheleash/") The Other End of the Leash
+					p www.patriciamcconnell.com /theotherendoftheleash
 section.pageEnd
 	figure.banner#philosophyEnd(style="background-image:url('../Hubert2-standard.jpg')").bg
 		div
