--- a/views/partials/contact.jade
+++ b/views/partials/contact.jade
@@ -1,4 +1,4 @@
-section.splash(style="background-image:url('../end.jpg')")
+section.splash(style="background-image:url('../contact-standard.jpg')")
 	div(style="left:25%;height:200px")
 		h1(style="font-size:3em") Contact Me
 		h2 Reach Out to Me Today!
