Fixed text on services.jade

--- a/views/partials/services.jade
+++ b/views/partials/services.jade
@@ -3,10 +3,9 @@ section.container#services
 		div.panel#consultation
 			ul
 				li: p.small Each private consult includes:
-				li: p.smallest A pre-consult Phone Call
+				li: p.smallest A pre-consult phone call
 				li: p.smallest A 90-minute in-home or on-location consult
-				li: p.smallest A detailed follow-up Email from our meeting inclucding a summary of the consult and key recommendation
-				li: p.smallest.italic All programs include all consultation features.
+				li: p.smallest A detailed follow-up email from our meeting including a summary of the consult and key recommendations
 		div.panel(ng-show="a")
 			div.panel
 				h2(style="color:#1BA39C") Puppies
@@ -36,7 +35,7 @@ section.container#services
 						li: p.smallest Puppy manners
 						li: p.smallest Puppy socialization
 						li: p.smallest Potty training
-						li: p.smallest Crate Training
+						li: p.smallest Crate training
 				figure(ng-hide="ad")
 					img(src="basset.jpg")
 				div(ng-show="aa")
@@ -44,7 +43,7 @@ section.container#services
 						p Perfect for pre-puppy consultations and first appointments after you've brought your puppy home.
 				div(ng-show="ab")
 					div.panel
-						p One session per week for four weeks. Perfect for gaining traction on a small set of basic behaviors: Sit, down, stay, and walking politely on leash. I show you the training mechanics during our sessions, and you get the chance to pratice training your puppy during the week (which, by the way, is a great way to build your relationship!)..
+						p One session per week for four weeks. Perfect for gaining traction on a small set of basic behaviors: Sit, down, stay, and walking politely on leash. I show you the training mechanics during our sessions, and you get the chance to pratice training your puppy during the week (which, by the way, is a great way to build your relationship!).
 				div(ng-show="ac")
 					div.panel
 						p Three sessions per week for four weeks. Perfect package for busy owners without the time to train their puppy. I will come to your home to train your puppy while you are away at work, and will have intermittent coaching sessions with you as well (one per week). Each puppy will have a custom training plan, which will be discussed during the pre-consult phone call and first session.
@@ -128,8 +127,8 @@ section.container#services
 						li: p.smallest Counter surfing
 						li: p.smallest Dog-dog aggression
 					ul.full
-						li: p.smallest Leash Pulling
-						li: p.smallest Body Handling(for Grooming)
+						li: p.smallest Leash pulling
+						li: p.smallest Body handling(for grooming)
 						li: p.smallest Shy or fearful behavior:
 						li: p.smallest Resource guarding
 						li: p.smallest Stranger fear
@@ -175,5 +174,5 @@ section.pageEnd
 	figure.banner#servicesEnd(style="background-image:url('../Maysie4-standard.jpg')").bg
 		div
 			h1 Have Questions | Want More Details?
-			p.small Reach out to me & start training your pooch today
+			p.small Reach out to me and start training your pooch today
 			a(href="/contact"): button.ease Contact Me
