Fixed text on philosophy.jade

--- a/views/partials/philosophy.jade
+++ b/views/partials/philosophy.jade
@@ -9,27 +9,29 @@ section.container#philosophy
 			p As a certified dog trainer and a member of the 
 				a(href="http://www.petprofessionalguild.com/", target="_blank") Pet Professional Guild
 				| , my mission is to provide the highest quality, force-free, scientific-based dog training and care to each of my clients and their furry family members. Dancing tails are a natural result because I attend to the physical, emotional, and environmental well being of the dogs in my care.
-			p Certified in Training and Behavior Consultation from the Dog Training Internship Academy in San Francisco, my training philosophy is based on animal learning theory, which explains how learning works and occurs. I use Classical and Operant Conditioning when designing the best training plan for your dog.
+			p Certified in Training and Behavior Consultation from the 
+				a(href="http://www.dogtraininginternshipacademy.com/", target="_blank") Dog Training Internship Academy 
+				| , in San Francisco, my training philosophy is based on animal learning theory, which explains how learning works and occurs. I use classical and operant conditioning when designing the best training plan for your dog.
 		div.panel
 			h2 
-				span.green Classical Condition: 
-				| Dogs learn through association.
+				span.green Classical Conditioning: 
+				| Dogs learn through association
 			p Dogs learn that when one thing happens, another will follow. He doesn’t have to do anything to make the second thing happen.
 			ul: li For example, Ivan Pavlov was the first to identify associative learning when his research dogs started salivating when they heard a tone prior to getting food. The dogs had learned that when they heard the tone, food was coming.
 		div.panel
 			img(src="classicalConditioning.jpg")
 		div.panel
 			h2 
-				span.green Operant Consition: 
-				| Dogs learn through consequences.
+				span.green Operant Conditioning: 
+				| Dogs learn through consequences
 			p Out of the four ways to increase or decrease behavior, I only use two: positive reinforcement and negative punishment. Both are humane training techniques, resulting in dancing tails and a strong bond between dog and handler.
 			ul
 				li 
-					span.bold Positive Reinforcement 
+					span.bold Positive reinforcement 
 					| increases a behavior due to the presentation of a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will happen if I…”
 					ul: li For example, I ask Charlie to sit, he sits, and then he gets his favorite treat.
 				li 
-					span.bold Negative Punishment 
+					span.bold Negative punishment 
 					| decreases a behavior by removing a good consequence when the response is performed. From a dog’s perspective this translates to, “This wonderful thing will stop if I…”
 					ul: li For example, Lola plays too rough, so I walk away.
 		div.panel
@@ -42,12 +44,12 @@ section.container#philosophy
 section.pageEnd
 	figure.banner(style="background-image: url('../Maysie2-standard.jpg'); background-size:cover;background-position:bottom center;background-attachment:fixed").bg
 		div
-			h1 Recommended Readings
+			h1 Recommended Resources
 section.container
 	div.grid-half
 		div.panelContainer
 			div.panel
-				h2 Recommended Readings
+				h2 Books
 			div.panel.list
 				div.listItem
 					p: a.bold(href="http://www.amazon.com/Pitcairns-Complete-Guide-Natural-Health/dp/157954973X/ref=sr_1_1?s=books&ie=UTF8&qid=1424997405&sr=1-1&keywords=dr.+pitcairns+complete+guide") Dr. Pitcairn's Complete Guide to Natural Health for Dogs & Cats
@@ -68,7 +70,7 @@ section.container
 	div.grid-half
 		div.panelContainer
 			div.panel
-				h2 Great Blogs
+				h2 Websites and Blogs
 			div.panel.list
 				div.listItem
 					p: a.bold(href="http://www.yourpitbullandyou.com/") Your Pit Bulls and You
@@ -80,5 +82,5 @@ section.pageEnd
 	figure.banner#philosophyEnd(style="background-image:url('../Hubert2-standard.jpg')").bg
 		div
 			h1 See for Yourself
-			p.small Watch our students in action!
+			p.small Watch my students in action!
 			a(href="/videos"): button.ease Video List
