Fixed text on home.jade again

--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -33,5 +33,5 @@ section.pageEnd
 	figure.banner#homeEnd(style="background-image:url('../Hubert1-standard.jpg')").bg
 		div
 			h1 Finding the Right Program
-			p.small Read about our different training programs and see which one fits your pup the best
+			p.small Read about the different training programs I offer and see which one fits your pup the best
 			a(href="/services"): button.ease View Programs
